--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,19 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.clearfix::after{
+  content:"";
+  display: table;
+  clear: both;
+}
+.fl{
+  float: left;
+}
+
 .container{
-background: url("../img/sfondo.png");
+  background: url("../img/sfondo.png");
+  padding: 20px 0 20px;
 }
 
 .contain{
@@ -13,61 +24,139 @@ background: url("../img/sfondo.png");
   margin: 0 auto;
 }
 
-.clearfix::after{
-  content:"";
-  display: table;
-  clear: both;
+.title{
+  background: white;
+  height: 100%;
+  padding: 20px;
 }
 
-.title{
-  background: #fff;
-  height: 300px;
+.image-title{
+  background: url("../img/foresta.png");
+  background-size: cover;
+  height: 400px;
+}
+
+.logo-title img{
+  width: 50%;
+  height: 50%;
+  text-align: center;
+  margin: 0 25% ;
+}
+
+.logo-title h1{
+  color: white;
+  text-align: center;
+}
+
+.menu li, a{
+  text-align: center;
+  display: inline;
+  width: 100%;
+  margin: 20px;
+  text-decoration: none;
+  vertical-align: text-bottom;
+  color: white;
 }
 
 .navbar{
+  padding-top: 25px;
   background: grey;
   height: 50px;
+  text-align: center;
+  color: white;
+  font-size: 12px;
 }
 
-.left-box{
+.column1{
   background: #fff;
   width: 25%;
-  height: 400px;
-  float:left;
-  margin: 10px 0px 0px;
-}
-.center-box{
-  background: #fff;
-  width:calc(40% - 0px);
-  height: 400px;
-  float: left;
-  margin: 10px 90px 0px;
+  border-radius: 5px;
+  margin-top: 10px;
+  margin-right: 30px;
+  padding: 10px 15px;
 }
 
-.right-box{
+.column1 h2{
+  display: inline-block;
+  margin-bottom: 15px;
+  vertical-align: top;
+}
+.column1 p{
+  color: darkgreen;
+}
+
+.column2{
+  width: calc(50% - 20px);
+  height: 500px;
+  margin-top: 10px;
+  margin-right: 50px;
+  padding: 0px 40px;
+}
+.padding-column{
+  background: #fff;
+  border-radius: 5px;
+  padding: 20px;
+}
+.padding-column h2{
+  margin-bottom: 20px;
+}
+
+
+.column3{
+  background: grey;
   width: 20%;
-  height: 1000px;
-  float: left;
-  margin: 10px 0px ;
-}
-
-.box:first-child{
-  margin: 0px 0px 10px;
-}
-
-.box:nth-child(2){
-  background: #fff;
-  height: 300px;
-  margin: 10px 0px;
+  border-radius: 5px;
+  margin-top: 10px;
 }
 
 .box{
   background: #fff;
-  height: 300px;
+  border-radius: 5px;
+  margin-bottom: 10px;
+  padding: 0 40px 0px;
+  line-height: 2.5;
 }
 
-.azure-box{
+.box h2{
+  margin-bottom: 30px;
+}
+
+
+.footer-box{
   background: #fff;
-  height: 100px;
+  width: 100%;
+  height: 200px;
+  text-align:center;
+  padding-top: 10px;
+  position: relative;
+  border-radius: 5px;
+}
+
+.footer-box h4 {
+  border-bottom: 2px solid #ccc;
+  color: #ccc
+}
+
+.facebook img{
+  background-size: cover;
+  width: 300px;
+  height: 150px;
+  float: left;
+
+}
+
+.instagram img{
+  background-size: cover;
+  width: 300px;
+  height: 150px;
+  float: left;
+  margin: 0 10%;
+}
+
+.github img{
+  background-size: cover;
+  width: 300px;
+  height: 150px;
+  float: left;
 
 }
